Завершение подготовки автоматизации и начало разметки

--- a/source/index.html
+++ b/source/index.html
@@ -5,8 +5,35 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Cafe Glitch: для тех, у кого есть вкус не только к еде</title>
+  <link rel="stylesheet" href="css/style.min.css">
+  <link rel="icon" type="image/x-icon" href="favicon/favicon.ico">
+  <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+  <link rel="manifest" href="favicon/site.webmanifest">
+  <link rel="mask-icon" href="favicon/safari-pinned-tab.svg" color="#5bbad5">
+  <meta name="msapplication-TileColor" content="#da532c">
+  <meta name="theme-color" content="#1a1a1a">
 </head>
 <body>
+  <header class="header">
+    <div class="header__logo-nest">
+      <img class="header__logo logo" src="" alt="Логотип «Cafe Glitch»">
+    </div>
+  </header>
+  <main class="main">
 
+  </main>
+
+  <nav class="main-nav">
+
+  </nav>
+
+  <section class="cookies-modal">
+    <h1 class="visually-hidden"></h1>
+    <p class="cookies-modal__text">
+      Наш сайт использует cookies для аналитики. Оставаясь на данном сайте, вы автоматически соглашаетесь с размещением файлов cookies в вашей системе. Если вы не согласны с условиями использования файлов cookies, вы можете покинуть сайт.
+    </p>
+  </section>
 </body>
 </html>
