--- a/source/index.html
+++ b/source/index.html
@@ -18,7 +18,7 @@
 <body>
   <header class="header">
     <div class="header__logo-nest">
-      <img class="header__logo logo" src="" alt="Логотип «Cafe Glitch»">
+      <img class="header__logo logo" src="img/logo-no-text.svg" width="220" height="220" alt="Логотип «Cafe Glitch»">
     </div>
   </header>
   <main class="main">
