--- a/source/index.html
+++ b/source/index.html
@@ -29,11 +29,47 @@
 
   </nav>
 
-  <section class="cookies-modal">
+  <section class="modal-agreement">
     <h1 class="visually-hidden"></h1>
-    <p class="cookies-modal__text">
-      Наш сайт использует cookies для аналитики. Оставаясь на данном сайте, вы автоматически соглашаетесь с размещением файлов cookies в вашей системе. Если вы не согласны с условиями использования файлов cookies, вы можете покинуть сайт.
-    </p>
+    <div class="modal-agreement__header">
+      <button class="modal-agreement__button modal-agreement__button--resize">
+        <svg class="modal-agreement__button-icon modal-agreement__button-icon--maximize" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="10" height="10"
+        	 viewBox="0 0 284 284" xml:space="preserve">
+        	 <path fill="#ffffff" d="M255.1,0H141.7H28.3H0v28.3v113.4v85.1v28.3v28.3h28.3h113.4h113.4h28.3v-28.3v-28.3v-85.1V28.3V0H255.1z
+        	 M255.1,141.7v85.1H141.7H28.3v-85.1V28.3h113.4h113.4V141.7z"/>
+        </svg>
+        <!-- <svg class="modal-agreement__button-icon modal-agreement__button-icon--minimize" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="10" height="2"
+        	 viewBox="0 0 284 284" xml:space="preserve">
+        	 <rect fill="#ffffff" y="226.8" width="284" height="57"/>
+        </svg> -->
+      </button>
+      <button class="modal-agreement__button modal-agreement__button--close">
+        <svg class="modal-agreement__button-icon modal-agreement__button-icon--close" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="10" height="10"
+        	 viewBox="0 0 284 284" xml:space="preserve">
+        	 <polygon fill="#ffffff" points="269.4,-0.2 255.3,-0.2 255.3,14 241.1,14 241.1,28.2 241.1,28.2 226.9,28.2 226.9,42.4 212.7,42.4
+        	212.7,56.6 212.7,56.6 198.5,56.6 198.5,70.7 184.4,70.7 184.4,84.9 184.4,84.9 170.2,84.9 170.2,99.1 156,99.1 156,113.3
+        	156,113.3 141.8,113.3 141.8,113.3 127.6,113.3 127.6,113.3 127.6,99.1 113.4,99.1 113.4,99.1 113.4,84.9 99.3,84.9 99.3,70.7
+        	85.1,70.7 85.1,56.6 70.9,56.6 70.9,42.4 56.7,42.4 56.7,28.2 42.5,28.2 42.5,14 28.4,14 28.4,-0.2 14.2,-0.2 0,-0.2 0,14 0,28.2
+        	14.2,28.2 14.2,42.4 28.4,42.4 28.4,56.6 42.5,56.6 42.5,70.7 56.7,70.7 56.7,84.9 70.9,84.9 70.9,99.1 85.1,99.1 85.1,113.3
+        	99.3,113.3 99.3,127.5 113.4,127.5 113.4,127.5 113.4,141.7 113.4,141.7 113.4,155.8 113.4,155.8 99.3,155.8 99.3,170 99.3,170
+        	85.1,170 85.1,184.2 70.9,184.2 70.9,198.4 56.7,198.4 56.7,212.6 42.5,212.6 42.5,226.7 28.4,226.7 28.4,240.9 14.2,240.9
+        	14.2,255.1 0,255.1 0,269.3 0,283.5 14.2,283.5 28.4,283.5 28.4,269.3 42.5,269.3 42.5,255.1 56.7,255.1 56.7,240.9 70.9,240.9
+        	70.9,226.7 85.1,226.7 85.1,212.6 99.3,212.6 99.3,198.4 113.4,198.4 113.4,184.2 127.6,184.2 127.6,170 127.6,170 141.8,170
+        	141.8,155.8 141.8,155.8 141.8,170 156,170 156,184.2 170.2,184.2 170.2,198.4 184.4,198.4 184.4,212.6 198.5,212.6 198.5,226.7
+        	212.7,226.7 212.7,240.9 226.9,240.9 226.9,255.1 241.1,255.1 241.1,269.3 255.3,269.3 255.3,283.5 269.4,283.5 283.6,283.5
+        	283.6,269.3 283.6,255.1 269.4,255.1 269.4,240.9 255.3,240.9 255.3,240.9 255.3,226.7 241.1,226.7 241.1,212.6 226.9,212.6
+        	226.9,212.6 226.9,198.4 212.7,198.4 212.7,184.2 198.5,184.2 198.5,184.2 198.5,170 184.4,170 184.4,155.8 170.2,155.8
+        	170.2,155.8 170.2,141.7 156,141.7 156,141.7 170.2,141.7 170.2,127.5 184.4,127.5 184.4,113.3 198.5,113.3 198.5,99.1 212.7,99.1
+        	212.7,84.9 226.9,84.9 226.9,70.7 241.1,70.7 241.1,56.6 255.3,56.6 255.3,42.4 269.4,42.4 269.4,28.2 283.6,28.2 283.6,14
+        	283.6,-0.2 "/>
+        </svg>
+      </button>
+    </div>
+    <div class="modal-agreement__body">
+      <p class="modal-agreement__text container">
+        Наш сайт использует cookies для аналитики. Оставаясь на данном сайте, вы автоматически соглашаетесь с размещением файлов cookies в вашей системе. Если вы не согласны с условиями использования файлов cookies, вы можете покинуть сайт<span class="modal-agreement__text-underscore">_</span>
+      </p>
+    </div>
   </section>
 </body>
 </html>
