--- a/source/index.html
+++ b/source/index.html
@@ -20,10 +20,13 @@
   <header class="header">
     <div class="header__logo-nest">
       <picture>
-        <source media="(min-width: 768px)" srcset="img/logo-no-text.svg" width="350" height="350">
-        <source media="(min-width: 500px)" srcset="img/logo-no-text.svg" width="280" height="280">
-        <img class="header__logo logo" src="img/logo-no-text.svg" width="220" height="220" alt="Логотип «Cafe Glitch»">
+        <source media="(min-width: 1200px)" srcset="img/logo-xl.svg">
+        <source media="(min-width: 768px)" srcset="img/logo-l.svg">
+        <source media="(min-width: 500px)" srcset="img/logo-m.svg">
+        <source media="(min-width: 376px)" srcset="img/logo-s.svg">
+        <img class="header__logo logo" src="img/logo-xs.svg" alt="Логотип «Cafe Glitch»">
       </picture>
+      <h1 class="header__heading" data-text="CAFÉ GLITCH">CAFÉ GLITCH</h1>
     </div>
   </header>
   <main class="main">
